--- a/index.html
+++ b/index.html
@@ -59,6 +59,10 @@
           <div class="u-custom-menu u-nav-container">
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link u-text-active-palette-1-base u-text-hover-palette-2-base" href="About" style="padding: 10px 20px;">About</a>
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link u-text-active-palette-1-base u-text-hover-palette-2-base" href="Contact" style="padding: 10px 20px;">Contact</a>
+</li><li class="u-nav-item"><a class="u-button-style u-nav-link u-text-active-palette-1-base u-text-hover-palette-2-base" href="Prices" style="padding: 10px 20px;">Prices</a>
+</li><li class="u-nav-item"><a class="u-button-style u-nav-link u-text-active-palette-1-base u-text-hover-palette-2-base" href="Strive" style="padding: 10px 20px;">Strive</a>
+
+
 </li></ul>
           </div>
           <div class="u-custom-menu u-nav-container-collapse">
@@ -67,6 +71,8 @@
                 <div class="u-menu-close"></div>
                   <ul class="u-align-center u-nav u-popupmenu-items u-unstyled u-nav-2"><a href="#about">About</a>
                     <ul class="u-align-center u-nav u-popupmenu-items u-unstyled u-nav-2"><a href="#contact">Contact</a>
+                      <ul class="u-align-center u-nav u-popupmenu-items u-unstyled u-nav-2"><a href="#price">Prices</a>
+                        <ul class="u-align-center u-nav u-popupmenu-items u-unstyled u-nav-2"><a href="#strive">Strive</a>
 </li></ul>
               </div>
             </div>
@@ -100,27 +106,33 @@
     <section class="u-clearfix u-section-2" id="carousel_d3d3">
       <div class="u-clearfix u-sheet u-sheet-1">
         <h6 class="u-text u-text-palette-2-base u-text-1">I'm not your avarage programmer.</h6>
-        <p class="u-text u-text-2">Quality is everything in my eyes, so it is something I will never overlook. Making high quality professional websites is what I love to do&nbsp;<br>
-          <br>Oh feel if up to till like.&nbsp;He an thing rapid these after going drawn or. Timed she his law the spoil round defer. In surprise concerns informed betrayed he learning is ye. Ignorant formerly so ye blessing. He as spoke avoid given downs money on we. Of properly carriage shutters ye as wandered up repeated moreover.
+        <p class="u-text u-text-2">Quality is everything in my eyes, so it is something I will never overlook. I will listen and work with you to get your site out there in the world.&nbsp;<br>
+          <br>Making high quality professional websites is what I love to do.&nbsp; I can't wait to work with you.
         </p>
       </div>
     </section>
+    
     <section class="u-align-center u-clearfix u-section-3" id="carousel_ea37">
+      <div id="price"></div>
+      <h6 class="u-text u-text-palette-2-base u-text-1">Prices:</h6>
       <div class="u-clearfix u-sheet u-sheet-1">
         <div class="u-clearfix u-gutter-50 u-layout-wrap u-layout-wrap-1">
           <div class="u-layout">
             <div class="u-layout-col">
               <div class="u-size-20">
+
                 <div class="u-layout-row">
+
                   <div class="u-align-center u-container-style u-layout-cell u-size-30 u-layout-cell-1">
                     <div class="u-container-layout u-valign-bottom-lg u-valign-bottom-md u-valign-bottom-xl u-container-layout-1">
-                      <h2 class="u-text u-text-1">2019</h2>
-                      <h6 class="u-text u-text-2">Sample Headline</h6>
+                      <h2 class="u-text u-text-1">$##</h2>
+                      <h6 class="u-text u-text-2">Simple</h6>
                     </div>
                   </div>
                   <div class="u-container-style u-grey-5 u-layout-cell u-size-30 u-layout-cell-2">
                     <div class="u-container-layout u-valign-middle u-container-layout-2">
-                      <p class="u-text u-text-default u-text-grey-40 u-text-3">Recruitment Agency that strives to help businesses put together a staff of highly efficient and skilled professionals, and also serve employees by opening up new vistas of job opportunities for them.</p>
+                      <p class="u-text u-text-default u-text-grey-40 u-text-3">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+                      </p>
                     </div>
                   </div>
                 </div>
@@ -129,13 +141,14 @@
                 <div class="u-layout-row">
                   <div class="u-align-center u-container-style u-layout-cell u-size-30 u-layout-cell-3">
                     <div class="u-container-layout u-valign-middle-xl u-valign-top-xs u-container-layout-3">
-                      <h2 class="u-text u-text-4">2020</h2>
-                      <h6 class="u-text u-text-5">Sample Headline</h6>
+                      <h2 class="u-text u-text-4">$##</h2>
+                      <h6 class="u-text u-text-5">Advanced</h6>
                     </div>
                   </div>
                   <div class="u-container-style u-layout-cell u-palette-2-base u-size-30 u-layout-cell-4">
                     <div class="u-border-6 u-border-palette-2-base u-container-layout u-valign-middle u-container-layout-4">
-                      <p class="u-text u-text-default u-text-6">Recruitment Agency that strives to help businesses put together a staff of highly efficient and skilled professionals, and also serve employees by opening up new vistas of job opportunities for them.</p>
+                      <p class="u-text u-text-default u-text-6">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+                      </p>
                     </div>
                   </div>
                 </div>
@@ -144,13 +157,14 @@
                 <div class="u-layout-row">
                   <div class="u-align-center u-container-style u-layout-cell u-size-30 u-layout-cell-5">
                     <div class="u-container-layout u-valign-middle-xl u-container-layout-5">
-                      <h2 class="u-text u-text-7">2021</h2>
-                      <h6 class="u-text u-text-8">Sample Headline</h6>
+                      <h2 class="u-text u-text-7">$##</h2>
+                      <h6 class="u-text u-text-8">Multi-page Site</h6>
                     </div>
                   </div>
                   <div class="u-container-style u-grey-5 u-layout-cell u-size-30 u-layout-cell-6">
                     <div class="u-container-layout u-valign-middle u-container-layout-6">
-                      <p class="u-text u-text-default u-text-grey-40 u-text-9">Recruitment Agency that strives to help businesses put together a staff of highly efficient and skilled professionals, and also serve employees by opening up new vistas of job opportunities for them.</p>
+                      <p class="u-text u-text-default u-text-grey-40 u-text-9">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+                      </p>
                     </div>
                   </div>
                 </div>
@@ -161,6 +175,8 @@
       </div>
     </section>
     <section class="u-clearfix u-section-4" id="carousel_2fc7">
+      <div id="strive"></div>
+
       <div class="u-clearfix u-sheet u-valign-middle-xl u-sheet-1">
         <div class="u-align-right u-container-style u-group u-palette-2-base u-group-1">
           <div class="u-container-layout u-valign-middle u-container-layout-1">
